@@ -1,3 +1,9 @@
+2005-04-06 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/canna_jrkanji.cpp, src/scim_canna_imengine.cpp,
+	  src/scim_canna_imengine.h:
+	Added visible flag for guide line string.
+
 2005-03-24 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/scim_canna_imengine_factory.cpp,
